added rem's everywhere. 20% finish tablet's layout

--- a/css/components/_benefits-section.scss
+++ b/css/components/_benefits-section.scss
@@ -2,7 +2,7 @@
     
     &:before {
         position: absolute;
-        bottom: -30px;
+        bottom: rem(-30px);
         left: 2%;
         content: url("../img/triangle.png");
     }
