--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,6 +1,14 @@
 html {
     font-size: $baseFontSize;
-  }
+
+    @include tablets {
+        font-size: $baseFontSize - 1px;
+    }
+
+    @include phones {
+        font-size: $baseFontSize - 2px;
+    }
+}
 
 html,
 body {
@@ -20,7 +28,7 @@ body {
 .wrapper {
     position: relative;
     width: 100%;
-    min-width: $containerWidth + 20px;
+    // min-width: $containerWidth + rem(20px);
     min-height: 100%;
     overflow: hidden;
 }
