--- a/css/components/_benefit.scss
+++ b/css/components/_benefit.scss
@@ -3,21 +3,21 @@
 }
 
 .benefit__title {
-    font-size: 24px;
+    font-size: rem(24px);
     font-weight: bold;
-    margin-bottom: 7px;
+    margin-bottom: rem(7px);
 }
 
 .benefit__desc {
     font-family: "Play";
-    font-size: 16px;
+    font-size: rem(16px);
     color: #666666;
 }
 
 .benefit__image-wrapper {
     display: inline-block;
-    width: 128px;
-    height: 128px;
+    width: rem(128px);
+    height: rem(128px);
     position: relative;
     background: #F2F5F4;
     border-radius: 50%;
@@ -25,8 +25,8 @@
 }
 
 .benefit__icon {
-    width: 60px;
-    height: 60px;
+    width: rem(60px);
+    height: rem(60px);
     position: absolute;
     top: 50%;
     left: 50%;
