--- a/css/components/_feature.scss
+++ b/css/components/_feature.scss
@@ -3,12 +3,12 @@
 }
 
 .feature__icon {
-    width: 40.43px;
-    margin-right: 11px;
+    width: rem(40.43px);
+    margin-right: rem(11px);
 }
 
 .feature__text {
-    font-size: 16px;
-    max-width: 85px;
-    margin-right: 8px
+    font-size: rem(16px);
+    max-width: rem(85px);
+    margin-right: rem(8px)
 }
