--- a/css/components/_form.scss
+++ b/css/components/_form.scss
@@ -4,7 +4,7 @@
 
 .form__col {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
         margin-right: 0;
@@ -13,7 +13,7 @@
 
 .form__row {
     display: flex;
-    margin-bottom: 14px;
+    margin-bottom: rem(14px);
 
     &:last-child {
         margin-bottom: 0;
@@ -22,7 +22,7 @@
 
 .form__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
         margin-right: 0;
@@ -32,14 +32,14 @@
 .form__input {
     width: 100%;
     border: none;
-    padding: 18px 11px;
+    padding: rem(18px) rem(11px);
     
-    border: solid 5px transparent;
-    border-radius: 5px;
+    border: solid rem(5px) transparent;
+    border-radius: rem(5px);
 
     &--textarea {
-        height: 174px;
-        // width: 450px;
+        height: rem(174px);
+        // width: rem(450px);
         resize: none;
     }
 
@@ -54,10 +54,10 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    margin-right: 24px;
+    margin-right: rem(24px);
 
     .radio {
-        margin-bottom: 10px;
+        margin-bottom: rem(10px);
     }
 }
 
