--- a/css/components/_section.scss
+++ b/css/components/_section.scss
@@ -1,6 +1,6 @@
 .section {
     height: 100vh;
-    min-height: 650px;
+    min-height: rem(650px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,10 +8,10 @@
 }
 
 .section__title {
-    font-size: 54px;
+    font-size: rem(54px);
     line-height: 100%;
     font-weight: bold;
-    margin-bottom: 60px;
+    margin-bottom: rem(60px);
     text-align: center;
     text-transform: uppercase;
 }
