--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,12 @@
 $containerWidth: 940px;
 $baseFontSize: 18px;
 
+
+// breaks
+
+$tablets: 768px;
+$phones: 480px;
+
 //colors
 $contrastWhite: #f2f5f4;
 $white: #f5f5f5;
@@ -14,6 +20,7 @@ $z-fixed-menu: 100;
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
 
 //setups
+@import "media.scss";
 @import "layout.scss";
 // @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans");
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,400i,700&display=swap&subset=cyrillic');
@@ -26,6 +33,7 @@ $z-fixed-menu: 100;
 @import "components/features";
 @import "components/feature";
 @import "components/btn";
+@import "components/hamburger";
 @import "components/menu";
 @import "components/phone-number";
 @import "components/section";
