finish tablet style

--- a/css/components/_benefits-section.scss
+++ b/css/components/_benefits-section.scss
@@ -3,7 +3,7 @@
     &:before {
         position: absolute;
         bottom: rem(-30px);
-        left: 2%;
+        left: rem(48px);
         content: url("../img/triangle.png");
     }
 }
