--- a/css/components/_btn.scss
+++ b/css/components/_btn.scss
@@ -29,6 +29,10 @@
         &:hover {
             color: black;
         }
+
+        @include tablets {
+            color: #E01F3D;
+        }
     }
 
 }
