--- a/css/main.scss
+++ b/css/main.scss
@@ -48,3 +48,7 @@ $z-fixed-menu: 100;
 @import "components/radio";
 @import "components/reviews__section";
 @import "components/fixed-menu";
+@import "components/map";
+@import "components/footer";
+@import "components/contacts";
+@import "components/socials";
