--- a/css/components/_form.scss
+++ b/css/components/_form.scss
@@ -1,5 +1,10 @@
 .form {
     display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        padding: 0 19%;
+    }
 }
 
 .form__col {
@@ -7,6 +12,10 @@
     margin-right: rem(20px);
 
     &:last-child {
+        margin-right: 0;
+    }
+
+    @include tablets {
         margin-right: 0;
     }
 }
@@ -17,6 +26,13 @@
 
     &:last-child {
         margin-bottom: 0;
+    }
+
+    @include tablets {
+        
+        &:last-child {
+            margin-bottom: rem(14px);
+        }
     }
 }
 
@@ -41,11 +57,19 @@
         height: rem(174px);
         // width: rem(450px);
         resize: none;
+
+        @include tablets {
+            height: rem(82px);
+        }
     }
 
     &:focus {
         border-color: red;
         outline: none;
+    }
+
+    @include tablets {
+        padding: rem(8px) rem(10px);
     }
 }
 
