--- a/css/components/_menu.scss
+++ b/css/components/_menu.scss
@@ -1,4 +1,6 @@
 .menu {
+    margin: 0 30px;
+    padding-top: 5px;
     @include tablets {
         display: none;
     }
@@ -7,10 +9,13 @@
 .menu__list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap; 
+    justify-content: center;
 }
 
 .menu__item {
     margin-right: rem(27px);
+    margin-bottom: rem(10px);
 
     &:last-child {
         margin-right: 0;
@@ -19,4 +24,5 @@
 
 .menu__link {
     text-decoration: none;
+    white-space: nowrap;
 }
