--- a/css/components/_phone-number.scss
+++ b/css/components/_phone-number.scss
@@ -4,6 +4,14 @@
     text-decoration: none;
     display: flex;
     align-items: center;
+
+    // @include tablets {
+    //     font-size: rem(21px);
+    // }
+}
+
+.phone-number__icon {
+    flex-shrink: 0;
 }
 
 .phone-number__icon-elem {
@@ -16,4 +24,15 @@
     @include tablets {
         display: none;
     }
+}
+
+.footer__phone-number .phone-number__text {
+    @include tablets {
+        color: red;
+        }
+}
+
+
+.phone-number__text {
+    white-space: nowrap;
 }
