--- a/css/main.css
+++ b/css/main.css
@@ -203,12 +203,12 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .features {
@@ -270,6 +270,11 @@ button {
 .btn--theme--transparent:hover {
   color: black;
 }
+@media screen and (max-width: 768px) {
+  .btn--theme--transparent {
+    color: #E01F3D;
+  }
+}
 
 .hamburger {
   width: 24px;
@@ -298,6 +303,10 @@ button {
   border-radius: 10px;
 }
 
+.menu {
+  margin: 0 30px;
+  padding-top: 5px;
+}
 @media screen and (max-width: 768px) {
   .menu {
     display: none;
@@ -311,10 +320,16 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .menu__item {
   margin-right: 1.5rem;
+  margin-bottom: 0.5555555556rem;
 }
 .menu__item:last-child {
   margin-right: 0;
@@ -322,6 +337,7 @@ button {
 
 .menu__link {
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .phone-number {
@@ -336,6 +352,11 @@ button {
           align-items: center;
 }
 
+.phone-number__icon {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
 .phone-number__icon-elem {
   width: 0.7777777778rem;
   height: 0.7655555556rem;
@@ -346,6 +367,16 @@ button {
   .header__phone-number {
     display: none;
   }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__phone-number .phone-number__text {
+    color: red;
+  }
+}
+
+.phone-number__text {
+  white-space: nowrap;
 }
 
 .section {
@@ -412,6 +443,11 @@ button {
   -webkit-transform: translate(50%);
           transform: translate(50%);
 }
+@media screen and (max-width: 768px) {
+  .benefits__item:before {
+    content: none;
+  }
+}
 .benefits__item:first-child {
   padding-left: 0;
 }
@@ -461,7 +497,7 @@ button {
 .benefits__section:before {
   position: absolute;
   bottom: -1.6666666667rem;
-  left: 2%;
+  left: 2.6666666667rem;
   content: url("../img/triangle.png");
 }
 
@@ -484,6 +520,11 @@ button {
           transform: translateX(-50%);
   top: -1.2222222222rem;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display::after {
+    top: -0.5555555556rem;
+  }
+}
 
 .reviews__display-inner {
   background-color: #F8FAF9;
@@ -494,10 +535,29 @@ button {
   position: relative;
   overflow: hidden;
 }
+@media screen and (max-width: 768px) {
+  .reviews__display-inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .reviews__avatar {
   width: 14.0555555556rem;
   height: 14.6666666667rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__avatar {
+    width: 7.2222222222rem;
+    height: 7.2222222222rem;
+    margin-bottom: 1.7777777778rem;
+  }
 }
 
 .reviews__avatar-img {
@@ -513,6 +573,11 @@ button {
       -ms-flex: 1;
           flex: 1;
   margin-left: 2.1111111111rem;
+}
+@media screen and (max-width: 768px) {
+  .reviews__content {
+    margin-left: 0;
+  }
 }
 
 .reviews__title {
@@ -592,6 +657,15 @@ button {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 19%;
+  }
+}
 
 .form__col {
   -webkit-box-flex: 1;
@@ -602,6 +676,11 @@ button {
 .form__col:last-child {
   margin-right: 0;
 }
+@media screen and (max-width: 768px) {
+  .form__col {
+    margin-right: 0;
+  }
+}
 
 .form__row {
   display: -webkit-box;
@@ -611,6 +690,11 @@ button {
 }
 .form__row:last-child {
   margin-bottom: 0;
+}
+@media screen and (max-width: 768px) {
+  .form__row:last-child {
+    margin-bottom: 0.7777777778rem;
+  }
 }
 
 .form__block {
@@ -634,9 +718,19 @@ button {
   height: 9.6666666667rem;
   resize: none;
 }
+@media screen and (max-width: 768px) {
+  .form__input--textarea {
+    height: 4.5555555556rem;
+  }
+}
 .form__input:focus {
   border-color: red;
   outline: none;
+}
+@media screen and (max-width: 768px) {
+  .form__input {
+    padding: 0.4444444444rem 0.5555555556rem;
+  }
 }
 
 .form__controls {
@@ -724,7 +818,7 @@ button {
 }
 .reviews__section:before {
   position: absolute;
-  bottom: -1.5rem;
+  bottom: -2.7777777778rem;
   left: 4.4444444444rem;
   content: url("../img/ball.png");
 }
@@ -769,4 +863,75 @@ button {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+.map-section {
+  position: relative;
+}
+
+.map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../img/map.png") center center/cover no-repeat;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 1.2777777778rem 0;
+  background: #fff;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1rem;
+}
+@media screen and (max-width: 768px) {
+  .contacts {
+    font-size: 1.1666666667rem;
+  }
+}
+
+.socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.socials__item {
+  margin-right: 0.5555555556rem;
+}
+
+.socials__link {
+  display: block;
+}
+
+.socials__icon {
+  width: 1.6666666667rem;
+  height: 1.6666666667rem;
 }
