--- a/css/components/_reviews.scss
+++ b/css/components/_reviews.scss
@@ -20,6 +20,10 @@
         @include tablets {
             top: rem(-10px);
         }
+
+        @include phones {
+            display: none; // на макете этого шарика нет.
+        }
     }
 }
 
