--- a/css/components/_fixed-menu.scss
+++ b/css/components/_fixed-menu.scss
@@ -3,6 +3,10 @@
     top: 35%;
     right: 4%;
     z-index: $z-fixed-menu;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .fixed-menu__item {
