--- a/css/components/_headline.scss
+++ b/css/components/_headline.scss
@@ -14,4 +14,8 @@
     font-size: rem(16px);
     padding: 0 18%;
     margin-bottom: rem(62px);
+
+    @include phones {
+        padding: 0 4%;
+    }
 }
