--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,10 @@ button {
     text-align: center;
   }
   .hero__title-section::before {
-    content: url("../img/tablets-background.png");
+    content: "";
+    width: 17.9444444444rem;
+    height: 17.9444444444rem;
+    background: url("../img/tablets-background.png") center center/contain no-repeat;
     margin-bottom: 3.5555555556rem;
   }
 }
@@ -421,11 +424,24 @@ button {
   padding: 0 18%;
   margin-bottom: 3.4444444444rem;
 }
+@media screen and (max-width: 480px) {
+  .headline__subtitle {
+    padding: 0 4%;
+  }
+}
 
 .benefits {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 480px) {
+  .benefits {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .benefits__item {
@@ -434,6 +450,12 @@ button {
           flex: 1;
   padding: 0 3%;
   position: relative;
+}
+@media screen and (max-width: 480px) {
+  .benefits__item {
+    padding: 0;
+    margin-bottom: 1.7222222222rem;
+  }
 }
 .benefits__item:before {
   content: url("../img/seporator.png");
@@ -461,6 +483,14 @@ button {
 .benefit {
   text-align: center;
 }
+@media screen and (max-width: 480px) {
+  .benefit {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: left;
+  }
+}
 
 .benefit__title {
   font-size: 1.3333333333rem;
@@ -482,6 +512,12 @@ button {
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
+}
+@media screen and (max-width: 480px) {
+  .benefit__image-wrapper {
+    margin-bottom: 0;
+    margin-right: 1.1111111111rem;
+  }
 }
 
 .benefit__icon {
@@ -523,6 +559,11 @@ button {
 @media screen and (max-width: 768px) {
   .reviews__display::after {
     top: -0.5555555556rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .reviews__display::after {
+    display: none;
   }
 }
 
@@ -664,6 +705,11 @@ button {
         -ms-flex-direction: column;
             flex-direction: column;
     padding: 0 19%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form {
+    padding: 0;
   }
 }
 
@@ -828,6 +874,11 @@ button {
   top: 35%;
   right: 4%;
   z-index: 100;
+}
+@media screen and (max-width: 768px) {
+  .fixed-menu {
+    display: none;
+  }
 }
 
 .fixed-menu__item {
