--- a/css/components/_form.scss
+++ b/css/components/_form.scss
@@ -80,12 +80,21 @@
 .form__controls {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    // flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     margin-right: rem(24px);
 
     .radio {
         margin-bottom: rem(10px);
+    }
+
+    &:last-child {
+        margin-right: 0;
+    }
+
+    @include phones {
+        justify-content: center;
     }
 }
 
