--- a/css/components/_phone-number.scss
+++ b/css/components/_phone-number.scss
@@ -40,3 +40,13 @@
 .phone-number__text {
     white-space: nowrap;
 }
+
+.red__phone {
+    @include tablets {
+        fill: red;
+    }
+
+    @include phones {
+        fill: black;
+    }
+}
