--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ $greyArticle: #666666;
 //z-index
 
 $z-fixed-menu: 100;
+$z-hamburger: 100;
 
 //normalize
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css");
