--- a/css/components/_socials.scss
+++ b/css/components/_socials.scss
@@ -4,6 +4,10 @@
   
   .socials__item {
     margin-right: rem(10px);
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
     
   .socials__icon {
