added shop section

--- a/css/components/_benefits-section.scss
+++ b/css/components/_benefits-section.scss
@@ -1,9 +1,10 @@
 .benefits__section {
 
-    &:before {
+    &::after {
         position: absolute;
         bottom: rem(-30px);
         left: rem(48px);
         content: url("../img/triangle.png");
+        z-index: 1;
     }
 }
