--- a/css/main.scss
+++ b/css/main.scss
@@ -53,3 +53,4 @@ $z-hamburger: 100;
 @import "components/footer";
 @import "components/contacts";
 @import "components/socials";
+@import "components/shop";
