--- a/css/components/_hamburger.scss
+++ b/css/components/_hamburger.scss
@@ -11,6 +11,7 @@
 
     @include tablets {
         display: inline-flex;
+        cursor: pointer;
     }
 }
 
@@ -19,4 +20,23 @@
     background: black;
     height: 4px;
     border-radius: 10px;
+    transition: 0.4s;
+}
+
+.change .hamburger__plank {
+    background: white;
+}
+
+.change .plank1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+    transform: rotate(-45deg) translate(-3px, 3px) ;
+}
+
+.change .plank2 {
+    opacity: 0;
+}
+
+.change .plank3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+    transform: rotate(45deg) translate(-8px, -8px) ;
 }
