--- a/css/components/_menu.scss
+++ b/css/components/_menu.scss
@@ -25,4 +25,8 @@
 .menu__link {
     text-decoration: none;
     white-space: nowrap;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
