--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,7 @@ button {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
+    cursor: pointer;
   }
 }
 
@@ -308,6 +309,26 @@ button {
   background: black;
   height: 4px;
   border-radius: 10px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.change .hamburger__plank {
+  background: white;
+}
+
+.change .plank1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-3px, 3px);
+}
+
+.change .plank2 {
+  opacity: 0;
+}
+
+.change .plank3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
 .menu {
@@ -345,6 +366,9 @@ button {
 .menu__link {
   text-decoration: none;
   white-space: nowrap;
+}
+.menu__link:hover {
+  text-decoration: underline;
 }
 
 .phone-number {
@@ -1169,4 +1193,46 @@ button {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.menu-fullscreen {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .menu-fullscreen {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: fixed;
+    font-size: 2rem;
+    text-align: center;
+    top: 0;
+    left: 100vw;
+    padding: 100px 30px 30px 30px;
+    z-index: 11;
+    width: 100vw;
+    height: 100vh;
+    background: #333537;
+    color: white;
+    -webkit-transition: left 0.3s ease 0s;
+    transition: left 0.3s ease 0s;
+    font-family: "Play";
+  }
+}
+
+.menu-fullscreen__item {
+  margin-bottom: 1.6666666667rem;
+}
+.menu-fullscreen__item:hover .menu-fullscreen__link {
+  text-decoration: underline;
+}
+.menu-fullscreen__item:last-child {
+  margin-bottom: 0;
+}
+
+.menu-fullscreen__link {
+  text-decoration: none;
 }
