--- a/css/main.scss
+++ b/css/main.scss
@@ -50,8 +50,9 @@ $z-hamburger: 100;
 @import "components/reviews__section";
 @import "components/fixed-menu";
 @import "components/map";
-@import "components/footer";
 @import "components/contacts";
 @import "components/socials";
 @import "components/shop";
 @import "components/menu-fullscreen";
+@import "components/slider";
+@import "components/footer";
