--- a/css/components/_footer.scss
+++ b/css/components/_footer.scss
@@ -5,12 +5,14 @@
     right: 0;
     padding: rem(23px) 0;
     background: #fff;
+    z-index: 15;
   }
   
   .footer__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 8;
 
     @include phones {
       flex-direction: column;
