--- a/css/main.scss
+++ b/css/main.scss
@@ -55,4 +55,5 @@ $z-hamburger: 100;
 @import "components/shop";
 @import "components/menu-fullscreen";
 @import "components/slider";
+@import "components/shop-gear-info";
 @import "components/footer";
