--- a/css/components/_slider.scss
+++ b/css/components/_slider.scss
@@ -13,14 +13,35 @@
     height: rem(27px);
     position: absolute;
     top: 50%;
+
+    @include tablets {
+      top: 25%;
+      right: 20%;
+    }
   
     &--right {
       right: -5%;
+
+      @include tablets {
+        right: 20%;
+      }
+
+      @include phones {
+        right: 0%;
+      }
     }
   
     &--left {
       left: -5%;
       transform: rotate(-180deg);
+
+      @include tablets {
+        left: 20%;
+      }
+
+      @include phones {
+        left: 0%;
+      }
     }
   }
   
